        PR rtl-optimization/54457         * simplify-rtx.c (simplify_subreg): 	Simplify (subreg:M (op:N ((x:N) (y:N)), 0)      	to (op:M (subreg:M (x:N) 0) (subreg:M (x:N) 0)), where 	the outer subreg is effectively a truncation to the original mode M.

testsuite/ChangeLog:

        PR rtl-optimization/54457
        * gcc.target/i386/pr54457.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@191928 138bc75d-0d04-0410-961f-82ee72b054a4